--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'java-gradle-plugin'
     id 'groovy'
     id 'maven-publish'
-    id "com.jfrog.bintray" version "1.7.1"
+    id 'com.jfrog.bintray' version '1.7.1'
+    id 'com.gradle.plugin-publish' version '0.9.4'
 }
 
 gradlePlugin {
@@ -52,5 +53,24 @@ bintray {
                 sign = true
             }
         }
+    }
+}
+pluginBundle {
+    website = 'https://github.com/ChaitanyaPramod/findbugs-android'
+    vcsUrl = 'https://github.com/ChaitanyaPramod/findbugs-android.git'
+    description = 'Gradle plugin that creates FindBugs tasks for each variant of android application or library project'
+    tags = ['android', 'findbugs']
+
+    plugins {
+        findbugsAndroidPlugin {
+            id = 'com.chaitanyapramod.findbugs-android'
+            displayName = 'Findbugs Android plugin'
+        }
+    }
+
+    mavenCoordinates {
+        groupId = 'com.chaitanyapramod.gradle'
+        artifactId = 'findbugs-android'
+        version = project.version
     }
 }
