Add project metadata to POM

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,30 @@ publishing {
             from components.java
 
             artifact sourceJar
+            pom.withXml {
+                def root = asNode()
+                root.appendNode('description', 'Gradle plugin that creates FindBugs reports for android projects')
+                root.appendNode('name', 'findbugs-android-gradle-plugin')
+                root.appendNode('url', 'https://findbugs-android.chaitanyapramod.com/')
+                root.children().last() + {
+                    licenses {
+                        license {
+                            name 'MIT License'
+                            url 'https://opensource.org/licenses/mit-license.php'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id 'ChaitanyaPramod'
+                            name 'Chaitanya Pramod'
+                            email 'me@chaitanyapramod.com'
+                        }
+                    }
+                    scm {
+                        url 'https://github.com/ChaitanyaPramod/findbugs-android.git'
+                    }
+                }
+           }
         }
     }
 }
