--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,18 @@ gradlePlugin {
 group 'com.chaitanyapramod.gradle'
 version '1.1'
 
-task sourceJar(type: Jar) {
+task sourceJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: groovydoc) {
+    classifier = 'javadoc'
+    from groovydoc.destinationDir
+
+    artifacts {
+        archives javadocJar
+    }
 }
 
 def pomConfig = {
@@ -48,6 +57,8 @@ publishing {
             from components.java
 
             artifact sourceJar
+            artifact javadocJar
+
             pom.withXml {
                 def root = asNode()
                 root.appendNode('description', 'Gradle plugin that creates FindBugs reports for android projects')
